# SwiftDropship

./: .gitignore  README.md  app.py  models.py  netlify.toml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
routes/: admin.py  auth.py  legal.py  shop.py
services/: recommender.py  sample_data.py
static/css/: style.css
static/js/: script.js
templates/: base.html  cart.html  checkout.html  index.html  login.html  my_orders.html  my_referral.html  order_confirmation.html  privacy_policy.html  product_detail.html  register.html  terms_of_service.html  wishlist.html
templates/admin/: add_product.html  dashboard.html
utils/: helpers.py  security.py
